force-app/main/default/objects/Exception_Logger__e/Exception_Logger__e.object-meta.xml
<CustomObject>
    <description>Platform event created for Exception Logger framework.</description>
    <label>Exception Logger</label>
    <pluralLabel>Exception Logger</pluralLabel>
</CustomObject>