force-app/main/default/objects/Exception_Logger__e/fields/BeckerLMS_Enrollment_Id__c.field-meta.xml
<CustomField>
    <fullName>BeckerLMS_Enrollment_Id__c</fullName>
    <label>BeckerLMS Enrollment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>