force-app/main/default/objects/Exception_Logger__e/fields/Exception__c.field-meta.xml
<CustomField>
    <fullName>Exception__c</fullName>
    <label>Exception</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>