force-app/main/default/objects/Exception_Logger__e/fields/Response_Status__c.field-meta.xml
<CustomField>
    <fullName>Response_Status__c</fullName>
    <label>Response Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>